# dofus_uniy

./: .env  README.md  a1.py  a2.py  file.blob~  main.py  proto_test.proto  proto_test_pb2.py  protobuf_config.py  pyproject.toml  python-sudo.sh  requirements.txt
database/: database.py  db_constructor.py  dofinhus.db  harvestables.json  harvestables_back.json  zaaps.json
migrations/: migration_2024_10_02_16_24_56_map_catalog.py  migration_2024_10_04_00_05_21_harverstable_info.py  migration_2024_10_04_00_54_02_zaaps.py
olha la/: Ankama.Dofus.Protocol.Game.csproj  ReportReflection.cs  ReportRequest.cs  ReportResponse.cs  UnitySourceGeneratedAssemblyMonoScriptTypes_v1.cs
olha la/Com.Ankama.Dofus.Server.Game.Protocol.Account/: AccountCapabilitiesEvent.cs  AccountInformationUpdateEvent.cs  AccountReflection.cs  AccountSubscriptionElapsedDurationUpdateEvent.cs  GuestLimitationEvent.cs  GuestModeEvent.cs  SubscriptionLimitationEvent.cs  SubscriptionZoneEvent.cs
olha la/Com.Ankama.Dofus.Server.Game.Protocol.Achievement/: AchievedAchievement.cs  Achievement.cs  AchievementDetailsEvent.cs  AchievementDetailsRequest.cs  AchievementFinishedEvent.cs  AchievementFinishedInformationEvent.cs  AchievementReflection.cs  AchievementRewardRequest.cs  AchievementRewardResultEvent.cs  AchievementsAlmostFinishedDetailedEvent.cs  AchievementsAlmostFinishedDetailedRequest.cs  AchievementsDetailedEvent.cs  AchievementsDetailedRequest.cs  AchievementsEvent.cs  (+2 more)
protobufer/: generate.sh  proto  proto_new  proto_test.proto  proto_test_pb2.py
xxx/: hfp.cs  igr.cs
(+2214 files in other folders)
