[tool.poetry]
name = "dofus-uniy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.6.0"
protobuf = "^5.28.2"
protobuf-inspector = "^0.2"
unitypy = "^1.20.2"
pycryptodomex = "^3.20.0"
bson = "^0.5.10"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
